# Landmark-Rust

./: Cargo.toml
data/: behaviors.toml  behaviour_outline.md  counters.toml  types.toml
data/cards/: keywords.toml
data/cards/farm_animals/: farmland.toml  piggie.toml  spectre_overlord.toml  water_sprite.toml
data/cards/set_001/farm/landscapes/: farmland.toml
data/cards/set_001/farm/units/: ironhide_hare.toml  piggie.toml  scarecrow.toml
data/cards/set_001/fire/heros/: lyra_embermist.toml
data/cards/set_001/fire/units/: flame_elemental.toml  flame_golem.toml
data/cards/set_001/generic/units/: flame_golem.toml  ice_golem.toml  rock_golem.toml  water_golem.toml  water_sprite.toml
src/: main.rs
src/card_finder/: card_finder.rs  mod.rs
src/game/: animation_presets.rs  board.rs  card_collection.rs  card_slot.rs  game_communicator.rs  game_context.rs  game_service.rs  game_state.rs  highlight_type.rs  id_types.rs  instruction.rs  location.rs  mod.rs  new_state_machine.rs  player.rs  prompts.rs  state_resources.rs  tag.rs  token_collection.rs  token_slot.rs  trigger_context.rs
src/game/cards/: card.rs  card_behavior.rs  card_behaviors.rs  card_behaviour.rs  card_deserialization.rs  card_instance.rs  card_registry.rs  default_card.rs  mod.rs  token_behaviors.rs  token_deserializer.rs
src/game/locations/: location.rs  mod.rs  token_collection.rs  token_slot.rs
src/game/tokens/: mod.rs  token_behaviors.rs  token_deserializer.rs  token_instance.rs  token_registry.rs
src/token_finder/: mod.rs  token_finder.rs
(+36 files in other folders)
